--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,12 @@ body {
 .margin {
     padding-top: 7px;
 }
+
+.searchpad {
+    padding-right: 7px !important
+}
+
+.test {
+    max-width: 100%;
+    max-height: 100%;
+}
